[gd_scene load_steps=5 format=3 uid="uid://ltddoqjoj2tw"]

[ext_resource type="Script" uid="uid://c07k4f0olalll" path="res://scripts/note_button.gd" id="1_lnu2h"]
[ext_resource type="Texture2D" uid="uid://exkv15835qj7" path="res://icon.svg" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://jrd0g2onaav4" path="res://scripts/game_manager.gd" id="2_yqjtg"]

[sub_resource type="GDScript" id="GDScript_lnu2h"]
script/source = "extends Control

func _ready() -> void:
	set_buttons_notes()

func set_buttons_notes() -> void:
	for button: NoteButton in get_children():
		button.change_note(\"G\")
"

[node name="Game" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="NoteButtons" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = SubResource("GDScript_lnu2h")

[node name="Button" type="Button" parent="UI/NoteButtons"]
layout_mode = 0
offset_left = 153.0
offset_top = 502.0
offset_right = 387.0
offset_bottom = 578.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "C"
script = ExtResource("1_lnu2h")

[node name="Button2" type="Button" parent="UI/NoteButtons"]
layout_mode = 0
offset_left = 445.0
offset_top = 502.0
offset_right = 679.0
offset_bottom = 578.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "D"
script = ExtResource("1_lnu2h")

[node name="Button3" type="Button" parent="UI/NoteButtons"]
layout_mode = 0
offset_left = 749.0
offset_top = 502.0
offset_right = 983.0
offset_bottom = 578.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "E"
script = ExtResource("1_lnu2h")

[node name="NoteDisplay" type="Panel" parent="UI"]
offset_left = 390.0
offset_top = 69.0
offset_right = 710.0
offset_bottom = 389.0

[node name="TextureRect" type="TextureRect" parent="UI/NoteDisplay"]
visible = false
layout_mode = 0
offset_left = 98.0
offset_top = 96.0
offset_right = 226.0
offset_bottom = 224.0
texture = ExtResource("1_uwrxv")

[node name="NoteName" type="Label" parent="UI/NoteDisplay"]
layout_mode = 0
offset_left = 118.0
offset_top = 123.0
offset_right = 211.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 40
text = "A"

[node name="GameManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_yqjtg")
